# Study

./: .gitignore  README.md  tomcat_optimizing.txt  vimium.txt  代码健壮性考虑.txt  写代码注意事项-java.txt  系分注意事项.txt  运维调度系统目标.txt
AI/: README.md  calculus.py  test.ipynb
FSharp/: CurryingTest.fs
Golang/: Concurrent pi.go  Finonacci Closure.go  MovieInfo_douban_go.go  defer.go  firstMap.go  hello,word.go  net.go
Groovy/: word_count.groovy  word_count_parallel.groovy
Java/: ListTest.java  LoadAndInit.java  ReferenceType.java  TestCollections.java  TestHashMap.java  handleHTML.java
Python/: Decorator.py  Itertools.py  PyFuncProgram.py  Test.py  exception_handler.py  itemgetter.py  pipetest.py  social_network.py  ssh_python_batch_operator.txt
Shell/: base.sh  checkHardwareInfo.sh  group_sort_join.txt  insertIntoFile.txt  ip_practices.txt  vim.txt
Sql/: parseTableToTree.sql  usefulSql.sql
coding/cplus/dbus/: CMakeLists.txt  Makefile  listen_signal.c  send_signal.c
economics/: chi_square_test_goodness_of_fit.ipynb  chi_square_test_independence copy.ipynb  inventory_example.ipynb  stock_price_mp3.ipynb  test.ipynb
formal methods/: Assignment2.v  Assignment3.v  Assignment4.v  Assignment6.v
formalmethods/: Assignment5.v  Assignment_1.v
framework/: SEDA.txt
golang/: defer.go  hello_word.go
groovy/: DSL.groovy
haskell/: first.hs
iaas/: client.py  coreos.txt  docker.txt  etcd_client.go  install.txt  lxc.txt  mesos.txt  xen.txt  zookeeper.txt
java/: activiti.txt  java.txt  java_object_class_detail.txt  spring_transaction.txt  spring注入提示.txt
kubernete/: 架构.txt  (+2 more)
(+744 files in other folders)
